examples/test/testpolicy9454.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9454
  namespace: namespace346
spec:
  podSelector:
    matchLabels:
      key29: value39
      key9: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value14
          key33: value33
      podSelector:
        matchLabels:
          key12: value8
          key46: value26
